<resources>
    <string name="app_name">Faster than Zero</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="developedby">Developed by Samuel Rodriguez</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login-->
    <string name="email">E-mail</string>
    <string name="signin">Sign in</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="contact_number">Contact Number</string>

</resources>