<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tx_developby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/developedby"
        android:textColor="@color/purple_500"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"

        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tx_developby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/applogo"
            android:contentDescription="@string/app_name"
            />

        <EditText
            android:id="@+id/et_loginemail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_background"
            android:ems="15"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:importantForAutofill="no"
            />

        <EditText
            android:id="@+id/et_loginpassword"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/et_background"
            android:ems="15"
            android:hint="@string/password"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:autofillHints="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_usersignin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/signin_rounded_button"
            android:text="@string/signin"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tx_register"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/purple_500" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>