<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_applogo"
                android:layout_width="wrap_content"
                android:layout_height="199dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/applogo"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/et_register_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/et_background"
                android:ems="10"
                android:hint="@string/fname"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints="@string/fname"/>

            <EditText
                android:id="@+id/et_register_lname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/et_background"
                android:ems="10"
                android:hint="@string/lname"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints="@string/lname" />


            <EditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/et_background"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints="@string/email"/>

            <EditText
                android:id="@+id/et_register_contact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/et_background"
                android:ems="10"
                android:hint="@string/contact_number"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints="@string/contact_number"/>


            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/et_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints="@string/password"/>

            <Button
                android:id="@+id/btn_register_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/signin_rounded_button"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>